[gd_scene load_steps=15 format=4 uid="uid://coitidekouvsq"]

[ext_resource type="Script" path="res://Scripts/level.gd" id="1_i2c5g"]
[ext_resource type="PackedScene" uid="uid://vgkhcf2ckty0" path="res://Scenes/LevelTemplate/game_tiles.tscn" id="2_dgsok"]
[ext_resource type="PackedScene" uid="uid://cxwad6kpad56d" path="res://Scenes/UI/hud.tscn" id="2_gxr6p"]
[ext_resource type="TileSet" uid="uid://bbqh8vr1yddvb" path="res://Assets/Tiles/TileSet.tres" id="3_gfh8k"]
[ext_resource type="PackedScene" uid="uid://bwc8yl2xh456l" path="res://Scenes/LevelTemplate/red_door.tscn" id="3_tndhk"]
[ext_resource type="PackedScene" uid="uid://cxtpak2q7r65b" path="res://Scenes/LevelTemplate/blue_door.tscn" id="4_4axas"]
[ext_resource type="PackedScene" uid="uid://3ifqhnmxx6wi" path="res://Scenes/Other/scene_transition_animation.tscn" id="5_g7w0g"]
[ext_resource type="PackedScene" uid="uid://cwrfv7ugv60gv" path="res://Scenes/LevelTemplate/red_char.tscn" id="6_ugj2d"]
[ext_resource type="PackedScene" uid="uid://cdib48umloxbd" path="res://Scenes/LevelTemplate/blue_char.tscn" id="7_g2qnc"]
[ext_resource type="PackedScene" uid="uid://c6xsdiynidkux" path="res://Scenes/Pickups/direction_pickup.tscn" id="8_4hhh8"]
[ext_resource type="PackedScene" uid="uid://d1h02ugxd3k7m" path="res://Scenes/Pickups/gravity_pickup.tscn" id="10_4dj7p"]
[ext_resource type="PackedScene" uid="uid://bubxvmb3wxec0" path="res://Scenes/Spikes/spike2.tscn" id="12_jdlms"]
[ext_resource type="PackedScene" uid="uid://lfkp4oe7u2ql" path="res://Scenes/Spikes/spike3.tscn" id="13_4fsml"]
[ext_resource type="AudioStream" uid="uid://bu4xr74hi0xk4" path="res://Assets/Sounds/WinSound.mp3" id="14_0cv7j"]

[node name="Level5" type="Node2D"]
script = ExtResource("1_i2c5g")

[node name="CanvasLayer" parent="." instance=ExtResource("2_gxr6p")]
level_number = 5

[node name="TileMapLayer" parent="." instance=ExtResource("2_dgsok")]
tile_map_data = PackedByteArray("AAD1//r/AAACAAAAAAAKAPr/AAACAAAAAAAKAAUAAAABAAEAAFD1/wUAAAACAAAAAAD2//r/AAACAAAAAAD3//r/AAACAAAAAAD4//r/AAACAAAAAAD5//r/AAACAAAAAAD6//r/AAACAAAAAAD7//r/AAACAAAAAAD8//r/AAACAAAAAAD+//z/AAACAAAAAAD///z/AAACAAAAAAAAAPz/AAACAAAAAAABAPz/AAACAAAAAAACAPz/AAACAAAAAAADAPz/AAACAAAAAAAEAPz/AAACAAAAAAAFAPz/AAACAAAAAAAGAPz/AAACAAAAAAAHAPz/AAACAAAAAAAIAPz/AAACAAAAAAAJAPz/AAACAAAAAAAKAPz/AAACAAAAAAAKAP3/AAACAAAAAAAKAP7/AAACAAAAAAAKAAMAAAACAAAAAAAKAAQAAAAAAAEAAFD+//r/AAACAAAAAAD///r/AAACAAAAAAAAAPr/AAACAAAAAAABAPr/AAACAAAAAAACAPr/AAACAAAAAAADAPr/AAACAAAAAAAEAPr/AAACAAAAAAAFAPr/AAACAAAAAAAGAPr/AAACAAAAAAAHAPr/AAACAAAAAAAIAPr/AAACAAAAAAAJAPr/AAACAAAAAAAKAPv/AAACAAAAAAAJAPv/AAACAAAAAAAIAPv/AAACAAAAAAAHAPv/AAACAAAAAAAGAPv/AAACAAAAAAAFAPv/AAACAAAAAAAEAPv/AAACAAAAAAADAPv/AAACAAAAAAACAPv/AAACAAAAAAABAPv/AAACAAAAAAAAAPv/AAACAAAAAAD///v/AAACAAAAAAD+//v/AAACAAAAAAAJAAUAAAACAAAAAAAIAAUAAAACAAAAAAAHAAUAAAACAAAAAAAGAAUAAAACAAAAAAAFAAUAAAACAAAAAAADAAUAAAACAAAAAAACAAUAAAACAAAAAAABAAUAAAACAAAAAAAAAAUAAAACAAAAAAD//wUAAAACAAAAAAD+/wUAAAACAAAAAAD9/wUAAAACAAAAAAD8/wUAAAACAAAAAAD2/wUAAAACAAAAAAD3/wUAAAACAAAAAAD4/wUAAAACAAAAAAD5/wUAAAACAAAAAAD6/wUAAAACAAAAAAD7/wUAAAACAAAAAAD1/wQAAAACAAAAAAD1/wMAAAACAAAAAAD1/wIAAAACAAAAAAD1/wEAAAACAAAAAAD1/wAAAAACAAAAAAD1////AAACAAAAAAD1//7/AAACAAAAAAD1//3/AAACAAAAAAD1//z/AAACAAAAAAD1//v/AAACAAAAAAD2//v/AAACAAAAAAD2//z/AAACAAAAAAD2//3/AAACAAAAAAD2//7/AAACAAAAAAD2////AAACAAAAAAD2/wAAAAACAAAAAAD2/wEAAAACAAAAAAD2/wIAAAACAAAAAAD2/wMAAAACAAAAAAD2/wQAAAACAAAAAAD3//v/AAACAAAAAAD3//z/AAACAAAAAAD3//3/AAACAAAAAAD3//7/AAACAAAAAAD3////AAACAAAAAAD3/wAAAAACAAAAAAD3/wEAAAACAAAAAAD3/wIAAAACAAAAAAD3/wMAAAACAAAAAAD3/wQAAAACAAAAAAD4//v/AAACAAAAAAD4//z/AAACAAAAAAD4//3/AAACAAAAAAD4//7/AAACAAAAAAD4////AAACAAAAAAD4/wAAAAACAAAAAAD4/wEAAAACAAAAAAD4/wIAAAACAAAAAAD4/wMAAAACAAAAAAD4/wQAAAACAAAAAAD5//v/AAACAAAAAAD5//z/AAACAAAAAAD5//3/AAACAAAAAAD5//7/AAACAAAAAAD5////AAACAAAAAAD5/wAAAAACAAAAAAD5/wEAAAACAAAAAAD5/wIAAAACAAAAAAD5/wMAAAACAAAAAAD5/wQAAAACAAAAAAD6//v/AAACAAAAAAD6//z/AAACAAAAAAD6//3/AAACAAAAAAD6//7/AAACAAAAAAD6////AAACAAAAAAD6/wAAAAACAAAAAAD6/wEAAAACAAAAAAD6/wIAAAACAAAAAAD6/wMAAAACAAAAAAD6/wQAAAACAAAAAAD7//v/AAACAAAAAAD7//z/AAACAAAAAAD7//3/AAACAAAAAAD7//7/AAACAAAAAAD7////AAACAAAAAAD7/wAAAAACAAAAAAD7/wEAAAACAAAAAAD7/wIAAAACAAAAAAD7/wMAAAACAAAAAAD7/wQAAAACAAAAAAD8//v/AAACAAAAAAD8//z/AAACAAAAAAD8//3/AAACAAAAAAD8//7/AAACAAAAAAD8////AAACAAAAAAD8/wEAAAACAAAAAAD8/wIAAAACAAAAAAD8/wMAAAACAAAAAAD8/wQAAAACAAAAAAD9//3/AAACAAAAAAD9//7/AAACAAAAAAD9////AAACAAAAAAD9/wEAAAACAAAAAAD9/wIAAAACAAAAAAD9/wQAAAACAAAAAAD+//3/AAACAAAAAAD+//7/AAACAAAAAAD+////AAACAAAAAAD+/wEAAAACAAAAAAD+/wIAAAACAAAAAAD+/wQAAAACAAAAAAD///3/AAACAAAAAAD///7/AAACAAAAAAD/////AAACAAAAAAD//wAAAAACAAAAAAD//wEAAAACAAAAAAD//wIAAAACAAAAAAD//wQAAAACAAAAAAAAAP3/AAACAAAAAAAAAP7/AAACAAAAAAAAAP//AAACAAAAAAAAAAAAAAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAQAAAACAAAAAAABAP3/AAACAAAAAAABAP7/AAACAAAAAAABAP//AAACAAAAAAABAAAAAAACAAAAAAABAAIAAAACAAAAAAABAAMAAAACAAAAAAABAAQAAAACAAAAAAACAP3/AAACAAAAAAACAP7/AAACAAAAAAACAP//AAACAAAAAAACAAAAAAACAAAAAAACAAIAAAACAAAAAAACAAMAAAACAAAAAAACAAQAAAACAAAAAAADAP3/AAACAAAAAAADAP7/AAACAAAAAAADAAMAAAACAAAAAAADAAQAAAACAAAAAAAEAP3/AAACAAAAAAAEAP7/AAACAAAAAAAEAAMAAAACAAAAAAAFAP3/AAACAAAAAAAFAP7/AAACAAAAAAAFAAQAAAACAAAAAAAGAP7/AAACAAAAAAAGAAQAAAACAAAAAAAHAP3/AAACAAAAAAAHAP7/AAACAAAAAAAHAAQAAAACAAAAAAAIAP3/AAACAAAAAAAIAP7/AAACAAAAAAAIAAQAAAACAAAAAAAJAP3/AAACAAAAAAAJAP7/AAACAAAAAAAJAAQAAAACAAAAAAD9/wMAAAACAAAAAAD+/wMAAAACAAAAAAD//wMAAAACAAAAAAAAAAMAAAACAAAAAAAGAAMAAAACAAAAAAAFAAMAAAACAAAAAAAHAAMAAAACAAAAAAAIAAMAAAACAAAAAAAJAAMAAAACAAAAAAACAAEAAAACAAAAAAABAAEAAAACAAAAAAD+/wAAAAACAAAAAAD9/wAAAAACAAAAAAD8/wAAAAACAAAAAAD9//z/AAACAAAAAAD9//v/AAACAAAAAAD9//r/AAACAAAAAAAEAAUAAAACAAAAAAAEAAQAAAACAAAAAAAGAP3/AAACAAAAAAADAP//AAACAAAAAAAEAP//AAACAAAAAAAFAP//AAACAAAAAAAGAP//AAACAAAAAAAHAP//AAACAAAAAAAIAP//AAACAAAAAAAJAP//AAACAAAAAAAKAP//AAACAAAAAAADAAEAAAACAAAAAAADAAIAAAACAAAAAAAEAAEAAAACAAAAAAAEAAIAAAACAAAAAAAFAAEAAAACAAAAAAAFAAIAAAACAAAAAAAGAAEAAAACAAAAAAAGAAIAAAACAAAAAAAHAAEAAAACAAAAAAAHAAIAAAACAAAAAAAIAAEAAAACAAAAAAAIAAIAAAACAAAAAAAJAAEAAAACAAAAAAAJAAIAAAACAAAAAAAKAAEAAAACAAAAAAAKAAIAAAACAAAAAAADAAAAAAACAAAAAAAEAAAAAAACAAAAAAAFAAAAAAACAAAAAAAGAAAAAAACAAAAAAAHAAAAAAACAAAAAAAIAAAAAAACAAAAAAAJAAAAAAACAAAAAAAKAAAAAAACAAAAAAANAAcAAAAAAAAAADAMAAcAAAABAAAAADALAAcAAAABAAAAADAKAAcAAAACAAEAAFAJAAcAAAABAAAAADAIAAcAAAACAAEAAFAHAAcAAAABAAAAADAGAAcAAAABAAAAADAFAAcAAAABAAAAADAEAAcAAAABAAAAADADAAcAAAABAAAAADACAAcAAAABAAAAADABAAcAAAABAAAAADAAAAcAAAABAAAAADD//wcAAAABAAAAADD+/wcAAAABAAAAADD9/wcAAAABAAAAADD8/wcAAAABAAAAADD7/wcAAAABAAAAADD6/wcAAAABAAAAADD5/wcAAAABAAAAADD4/wcAAAABAAAAADD2/wcAAAABAAAAADD1/wcAAAABAAAAADD0/wcAAAABAAAAADDz/wcAAAABAAAAADDy/wcAAAAAAAAAAGDy//j/AAAAAAAAAAANAPj/AAAAAAAAAFANAPn/AAABAAAAAFANAPr/AAABAAAAAFANAPv/AAABAAAAAFANAPz/AAABAAAAAFANAP3/AAABAAAAAFANAP7/AAABAAAAAFANAP//AAABAAAAAFANAAAAAAABAAAAAFANAAEAAAABAAAAAFANAAIAAAABAAAAAFANAAMAAAABAAAAAFANAAQAAAABAAAAAFANAAUAAAABAAAAAFANAAYAAAABAAAAAFDy/wYAAAABAAAAAGDy/wUAAAABAAAAAGDy/wQAAAABAAAAAGDy/wMAAAABAAAAAGDy/wIAAAABAAAAAGDy/wEAAAABAAAAAGDy/wAAAAABAAAAAGDy////AAABAAAAAGDy//7/AAABAAAAAGDy//3/AAABAAAAAGDy//z/AAABAAAAAGDy//v/AAABAAAAAGDy//r/AAABAAAAAGDy//n/AAABAAAAAGDz//j/AAABAAAAAAD0//j/AAABAAAAAAD1//j/AAABAAAAAAD2//j/AAABAAAAAAD3//j/AAABAAAAAAD4//j/AAABAAAAAAD5//j/AAABAAAAAAD6//j/AAABAAAAAAD7//j/AAABAAAAAAD8//j/AAABAAAAAAD9//j/AAABAAAAAAD+//j/AAABAAAAAAD///j/AAABAAAAAAAAAPj/AAABAAAAAAABAPj/AAABAAAAAAACAPj/AAABAAAAAAADAPj/AAABAAAAAAAEAPj/AAABAAAAAAAFAPj/AAABAAAAAAAGAPj/AAABAAAAAAAHAPj/AAABAAAAAAAIAPj/AAABAAAAAAAJAPj/AAABAAAAAAAKAPj/AAABAAAAAAALAPj/AAABAAAAAAAMAPj/AAABAAAAAAADAPn/AAACAAAAAAAEAPn/AAACAAAAAAALAPv/AAACAAAAAAALAPr/AAACAAAAAAAFAPn/AAACAAAAAAAGAPn/AAACAAAAAAAHAPn/AAACAAAAAAAIAPn/AAACAAAAAAAJAPn/AAACAAAAAAAKAPn/AAACAAAAAAALAPn/AAACAAAAAAAMAPn/AAACAAAAAAAMAPr/AAACAAAAAAAMAPv/AAACAAAAAAALAPz/AAACAAAAAAALAP3/AAACAAAAAAALAP7/AAACAAAAAAAKAAYAAAABAAEAAFALAAYAAAACAAAAAAAMAAYAAAACAAAAAAAMAAUAAAACAAAAAAALAAUAAAACAAAAAAALAAQAAAACAAAAAAALAAAAAAACAAAAAAALAAEAAAACAAAAAAALAAIAAAACAAAAAAALAP//AAACAAAAAAALAAMAAAACAAAAAAAMAAQAAAACAAAAAAAMAAMAAAACAAAAAAAMAAIAAAACAAAAAAAMAAEAAAACAAAAAAAMAAAAAAACAAAAAAAMAP//AAACAAAAAAAMAP7/AAACAAAAAAAMAP3/AAACAAAAAAAMAPz/AAACAAAAAAAJAAYAAAACAAAAAAAIAAYAAAAAAAEAAFAHAAYAAAACAAAAAAAGAAYAAAACAAAAAAAFAAYAAAACAAAAAAAEAAYAAAACAAAAAAADAAYAAAACAAAAAAACAAYAAAACAAAAAAABAAYAAAACAAAAAAAAAAYAAAACAAAAAAD//wYAAAACAAAAAAD+/wYAAAACAAAAAAD9/wYAAAACAAAAAAD8/wYAAAACAAAAAAD7/wYAAAACAAAAAAD6/wYAAAACAAAAAAD5/wYAAAACAAAAAAD4/wYAAAACAAAAAAD3/wYAAAACAAAAAAD2/wYAAAACAAAAAAD1/wYAAAACAAAAAAD0/wYAAAACAAAAAADz/wYAAAACAAAAAADz/wUAAAACAAAAAAD0/wUAAAACAAAAAAD0/wQAAAACAAAAAADz/wQAAAACAAAAAADz/wMAAAACAAAAAADz/wIAAAACAAAAAADz/wEAAAACAAAAAADz/wAAAAACAAAAAADz////AAACAAAAAADz//7/AAACAAAAAAD0//7/AAACAAAAAAD0//3/AAACAAAAAAD0//z/AAACAAAAAAD0////AAACAAAAAAD0/wAAAAACAAAAAAD0/wEAAAACAAAAAAD0/wIAAAACAAAAAAD0/wMAAAACAAAAAAD0//r/AAACAAAAAAD0//v/AAACAAAAAADz//z/AAACAAAAAADz//3/AAACAAAAAADz//v/AAACAAAAAADz//r/AAACAAAAAADz//n/AAACAAAAAAD0//n/AAACAAAAAAD1//n/AAACAAAAAAD2//n/AAACAAAAAAD3//n/AAACAAAAAAD4//n/AAACAAAAAAD5//n/AAACAAAAAAD6//n/AAACAAAAAAD7//n/AAACAAAAAAD8//n/AAACAAAAAAD9//n/AAACAAAAAAD+//n/AAACAAAAAAD///n/AAACAAAAAAAAAPn/AAACAAAAAAABAPn/AAACAAAAAAACAPn/AAACAAAAAADx/wcAAAACAAIAAADx/wYAAAACAAIAAADx/wUAAAACAAIAAADx//j/AAACAAIAAADx//n/AAACAAIAAADx//r/AAACAAIAAADx//v/AAACAAIAAADx//z/AAACAAIAAADx//3/AAACAAIAAADx//7/AAACAAIAAADx////AAACAAIAAADx/wAAAAACAAIAAADx/wEAAAACAAIAAADx/wIAAAACAAIAAADx/wMAAAACAAIAAADx/wQAAAACAAIAAAAOAAcAAAACAAIAAAAOAAYAAAACAAIAAAAOAAUAAAACAAIAAAAOAAQAAAACAAIAAAAOAAMAAAACAAIAAAAOAAIAAAACAAIAAAAOAAEAAAACAAIAAAAOAAAAAAACAAIAAAAOAP//AAACAAIAAAAOAP7/AAACAAIAAAAOAP3/AAACAAIAAAAOAPz/AAACAAIAAAAOAPv/AAACAAIAAAAOAPr/AAACAAIAAAAOAPn/AAACAAIAAAAOAPj/AAACAAIAAAD3/wcAAAABAAAAADA=")
tile_set = ExtResource("3_gfh8k")

[node name="RedDoor" parent="." instance=ExtResource("3_tndhk")]
position = Vector2(200, 101)

[node name="BlueDoor" parent="." instance=ExtResource("4_4axas")]
position = Vector2(200, -101)
rotation = 3.14159

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("5_g7w0g")]

[node name="RedChar" parent="." instance=ExtResource("6_ugj2d")]
position = Vector2(-172, -115)
gravity_direction = -1

[node name="BlueChar" parent="." instance=ExtResource("7_g2qnc")]
position = Vector2(-172, 108)

[node name="DirectionPickup" parent="." instance=ExtResource("8_4hhh8")]
position = Vector2(-30, -112)

[node name="GravityPickup" parent="." instance=ExtResource("10_4dj7p")]
position = Vector2(-33, 109)

[node name="GravityPickup2" parent="." instance=ExtResource("10_4dj7p")]
position = Vector2(-204, -112)

[node name="Spike2" parent="." instance=ExtResource("12_jdlms")]
position = Vector2(63, -117)
rotation = -3.14159

[node name="Spike3" parent="." instance=ExtResource("13_4fsml")]
position = Vector2(0, 117)

[node name="Spike4" parent="." instance=ExtResource("13_4fsml")]
position = Vector2(0, -117)
rotation = 3.14159

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_0cv7j")
volume_db = -4.685
